Fix feature card item price alignment when viewed in smaller screen.

--- a/client/my-sites/plans/jetpack-plans/product-store/featured-item-card/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-store/featured-item-card/style.scss
@@ -98,3 +98,17 @@
 	justify-content: flex-start;
 	margin-top: 24px;
 }
+
+
+.featured-item-card .display-price {
+	@media screen and (min-width: 320px) {
+		display: flex;
+		min-height: 24px;
+	}
+}
+
+.featured-item-card .item-price .display-price .display-price__billing-time-frame {
+	@media screen and (min-width: 320px) {
+		margin-top: 0;
+	}
+}
